# cheap_modbus_rtu

./: README.md  pyproject.toml
docs/html/: annotated.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_cheap_modbus_relay_i_o_module-members.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_cheap_modbus_relay_i_o_module.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_modbus_module_a_b_c-members.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_modbus_module_a_b_c.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_n4_a_i_a04-members.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_n4_a_i_a04.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_n4_d_a_c02.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_p_w_m8_a04-members.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_p_w_m8_a04.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_r4_d_i_f08-members.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_r4_d_i_f08.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_relay1_ch-members.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_relay1_ch.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_relay2_ch-members.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_relay2_ch.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_relay4_ch-members.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_relay4_ch.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_relay8_ch-members.html  classcheap__modbus__rtu_1_1cheap__modbus__io_1_1_relay8_ch.html  classes.html  functions.html  functions_func.html  index.html  (+14 more)
(+4 files in other folders)
